test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-service
  template:
    metadata:
      labels:
        app: deploy-service
    spec:
      serviceAccountName: deploy-service-sa
      containers:
      - name: deploy-service
        image: node:18-alpine
        workingDir: /app
        command: ["/bin/sh"]
        args: ["-c", "echo 'const express=require(\"express\");const k8s=require(\"@kubernetes/client-node\");const app=express();app.use(express.json());const kc=new k8s.KubeConfig();kc.loadFromCluster();const k8sApi=kc.makeApiClient(k8s.CoreV1Api);const k8sBatchApi=kc.makeApiClient(k8s.BatchV1Api);const k8sAppsApi=kc.makeApiClient(k8s.AppsV1Api);const namespace=process.env.NAMESPACE||\"default\";app.post(\"/deploy\",async(req,res)=>{try{const{repo_url,image_name,registry=\"registry.digitalocea [...]
        ports:
        - containerPort: 8080
